test asset parameter #2

--- a/empty/eunji.parameter.yaml
+++ b/empty/eunji.parameter.yaml
@@ -1,10 +1,10 @@
 parameter:
-  - name: max_trial_count
-    description: 최대 시도 횟수
+  - name: retry
+    description: 재시도 횟수
     required: true
-    default_value: 2
-  - name: is_prod
-    description: 운영여부
+    default_value: 3
+  - name: is_test
+    description: 테스트 여부
     required: true
     allowable_values:
       - true
