--- a/empty/train.parameter.yaml
+++ b/empty/train.parameter.yaml
@@ -2,9 +2,9 @@ parameter:
   - name: max_trial_count
     description: 최대 시도 횟수
     required: true
-    default_value: 2
+    default_value: 2 4
   - name: is_prod
-    description: 운영여부
+    description: 운영 여부
     required: true
     allowable_values:
       - true
